--- a/AN.Web/appsettings.json
+++ b/AN.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Server=localhost; Database=DB-AwroNore-New;User Id=sa;Password=sa; MultipleActiveResultSets=true",
-    "HangfireConnectionString": "Server=localhost; Database=DB-AwroNore-Jobs;User Id=sa;Password=sa; MultipleActiveResultSets=true;"
+    "ConnectionString": "Server=localhost; Database=DB-IDoctor;User Id=sa;Password=sa; MultipleActiveResultSets=true",
+    "HangfireConnectionString": "Server=localhost; Database=DB-IDoctor-Jobs;User Id=sa;Password=sa; MultipleActiveResultSets=true;"
   },
 
   "IdentityServer": {
