--- a/IdentityServer/Identity.Web/appsettings.json
+++ b/IdentityServer/Identity.Web/appsettings.json
@@ -20,6 +20,12 @@
       "ApiKey": "hlYb1aYSgktxh9RceQMH5xYS/fKjm15oNuNKttsTvHU=",
       "SourceAddress": "Awrosoft",
       "Unicode": true
+    },
+    "RouteMobileOptions": {
+      "BaseUrl": "http://api.rmlconnect.net:8080",
+      "Username": "Awrosoft",
+      "Password": "T4jTGrSL",
+      "SourceAddress": "iDoctor"
     }
   }
 }
