Some issues solved

--- a/AN.Web/appsettings.json
+++ b/AN.Web/appsettings.json
@@ -50,6 +50,7 @@
       "DisclamerKu": "به‌كاربه‌ره‌ خۆشه‌ویسته‌كان ئاگادار ده‌كه‌ینه‌وه‌ كه‌ خزمه‌تگوزاری ڕاوێژ وه‌رگرتن به‌ خۆبه‌خشانه‌ له‌ لایه‌ن پزیشكه‌كانه‌وه‌ پێشكه‌ش ده‌كرێت، له‌كاتی هه‌بوونی هه‌ر بارودۆخێكی له‌ناكاو په‌یوه‌ندی به‌ لایه‌نی په‌یوه‌ندیدار بكه‌ن، ئێمه‌ و پزیشكه‌ به‌ڕێزه‌كان به‌رپرسیار نین له‌ هیچ بارودۆخێكی له‌ناكاو.",
       "DisclamerAr": "أعزائي المستخدمين، نود إبلاغكم بأن خدمة الاستشارة يتم تقديمها طواعية من قبل الأطباء، في حالة الطوارئ، يرجى الاتصال بالطرف ذي الصلة، حيث أن أورونوره أو الأطباء ليسوا مسؤولون عن حالات الطوارئ."
     },
+    "EnableCovidServices": false,
     "ChatScreenMention": {
       "Mention": "Please don't use as emergency",
       "MentionKu": "بۆ حاڵەتی ناکاو نابێت",
